<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/flower">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="end|center_vertical"
            android:text="@string/nickname"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/input_nickname"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="end|center_vertical"
            android:text="@string/realname"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edt_realname"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/input_realname"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="end|center_vertical"
            android:text="@string/password"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edt_password1"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/input_password"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="end|center_vertical"
            android:text="@string/password2"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edt_password2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:hint="@string/input_password2"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:background="#99ffffff"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>