<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/flower">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/user_id"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edt_user_id"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/input_user_id"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/input_password"
            android:textSize="20dp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:background="#99ffffff"
            android:text="@string/login"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:background="#99ffffff"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>