<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/scnu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/modify_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/input_old_password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_old_password"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/input_new_password1"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_new_password1"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/input_new_password2"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_new_password2"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:background="@drawable/round3"
            android:textColor="#ffffff"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>