<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/scnu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/my_profile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_id"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edt_user_id"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/nickname"/>

        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/realname"/>

        <EditText
            android:id="@+id/edt_realname"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_modify_profile"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:background="@drawable/round3"
            android:textColor="#ffffff"
            android:text="@string/modify_profile"/>
    </LinearLayout>
</LinearLayout>